Add a Donation Alert Box

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
     <meta name="msapplication-config" content="browserconfig.xml">
     <!-- favicons  -->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/e0f44fafba.js" crossorigin="anonymous"></script>
+
 
 </head>
 
@@ -76,6 +77,30 @@
 
     <br>
     <br>
+
+    <div class="row">
+        <div class="col m12 s12">
+            <div class="card-panel red darken-4" id="help-alert">
+                <h4 class="header center white-text">
+                    Ajută-ne în lupta contra COVID!
+                </h4>
+                <h5 class="header center white-text">
+                    <i class="fa fa-donate white-text"></i> Donează la: RO84BRDE100SV64320531000
+                </h5>
+                <h6 class="header center white-text">
+                    (Codul IBAN al contului BRD)
+                </h6>
+                <br>
+                <h5 class="header center blue-text">
+                    <a href="https://www.facebook.com/BoogeyBots.team/posts/665557360671248?__xts__[0]=68.ARCFDHd9T9AgV14wq15hz85LMkFr1P8OO6NKJG3aLu2t3mKEuZF9EEEyQZzwi2cyGl3I6Xpn_v1t3Wlweeofv4VyVL6ASzJElrFkFgE9CeeEOoD1G5BezneirR4CiDpzuif2Tml5tCVYTQOQuhZ7Cptl5n6YSo29z4VOl8ELPu436FC5gdy0ke7je0Xpp2iJqXhDC5D9HwHko3OlPnC7PzJEgc-Q5IIiqsUZaqyb7CBuaHV9s4BNja0R_hMYpxnw1vw1xRpu4Vcq3I4NRqnCjgDx8MlmGnoTAy0wslORpYaBt3UB9bd5u5rSG0VTiCHLckrLy6VJV-p4cZC33850tHs&__tn__=-R"
+                        target="_blank">
+                        <i class="fa fa-facebook"> </i> Cum am ajutat medicii din linia întâi
+                    </a>
+                </h5>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
         <div class="row">
             <div class="col s12 m8">
