--- a/our_team.html
+++ b/our_team.html
@@ -32,9 +32,10 @@
     <meta name="msapplication-config" content="browserconfig.xml">
     <!-- favicons  -->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/e0f44fafba.js" crossorigin="anonymous"></script>
+
 
 </head>
 
