Add the mentor's phone number

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="col m12 s12">
             <div class="card-panel red darken-4" id="help-alert">
                 <h4 class="header center white-text">
-                    Ajută-ne în lupta contra COVID!
+                    Ajută-ne în lupta contra COVID-19!
                 </h4>
                 <h5 class="header center white-text">
                     <i class="fa fa-donate white-text"></i> Donează la: RO84BRDE100SV64320531000
@@ -149,13 +149,13 @@
     <footer class="page-footer grey darken-4">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12 offset-s2">
+                <div class="col l6 s8 offset-s2">
                     <h4 class="white-text">Contact</h4>
-                    <h6 class="grey-text text-lighten-4"><i class="fa fa-phone"></i> +4072334585475847435</h6>
+                    <h6 class="grey-text text-lighten-4"><i class="fa fa-phone"></i> +40 (766) 417 409 (Foarfecă Guniță, mentorul echipei)</h6>
                     <h6 class="grey-text text-lighten-4"><i class="fa fa-envelope"></i> boogeybots@gmail.com</h6>
 
                 </div>
-                <div class="col l4 offset-l2 s12 offset-s2">
+                <div class="col l4 offset-l2 s8 offset-s2">
                     <h4 class=" white-text">Useful Links</h4>
 
                     <ul>
