put the right roles for everybody so it looks more profi

--- a/our_team.html
+++ b/our_team.html
@@ -90,7 +90,7 @@
                     </div>
                     <div class="card-content">
                         <h5 class="card-title activator red-text text-darken-4 center-align">SERGIU MARTON</h5>
-                        <h6 class="center-align">Mare Programator</h6>
+                        <h6 class="center-align">Programator</h6>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title  red-text text-darken-4 center-align ">
@@ -112,7 +112,7 @@
                     </div>
                     <div class="card-content">
                         <h5 class="card-title activator red-text text-darken-4 center-align">NICUȘOR CRUCERU</h5>
-                        <h6 class="center-align">Programator Chef</h6>
+                        <h6 class="center-align">Programator</h6>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title red-text text-darken-4 center-align">
@@ -136,7 +136,7 @@
                     </div>
                     <div class="card-content">
                         <h5 class="card-title activator red-text text-darken-4 center-align">COSTEL PETREA</h5>
-                        <h6 class="center-align">Șeful la Șeful Șefilor</h6>
+                        <h6 class="center-align">Inginer</h6>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title red-text text-darken-4 center-align">
@@ -160,7 +160,7 @@
                     </div>
                     <div class="card-content">
                         <h5 class="card-title activator red-text text-darken-4 center-align">CARP BOGDAN</h5>
-                        <h6 class="center-align">Șeful Șefilor</h6>
+                        <h6 class="center-align">Team Leader</h6>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title red-text text-darken-4 center-align">
@@ -184,7 +184,7 @@
                     </div>
                     <div class="card-content">
                         <h5 class="card-title activator red-text text-darken-4 center-align">RAREȘ DONE</h5>
-                        <h6 class="center-align">Photoshoapparu sef</h6>
+                        <h6 class="center-align">Designer Photo</h6>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title red-text text-darken-4 center-align">
@@ -207,7 +207,7 @@
                     </div>
                     <div class="card-content">
                         <h5 class="card-title activator red-text text-darken-4 center-align">NICU CIOCÎRLAN</h5>
-                        <h6 class="center-align">Inginerul Sârmă</h6>
+                        <h6 class="center-align">Inginer</h6>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title red-text text-darken-4 center-align">
