make a better description of the team

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <br>
                 <hr>
                 <br>
-                <h4 class="center black-text text-darken-4">Misiunea BoogeyHotz a inceput atunci cand idk ...bla bla<br></h4>
+                <h4 class="center black-text text-darken-4">Echipa de robotică a Colegiului Național "Alexandru Vlahuță" a fost înființată in anul 2018 cu misiunea de a introduce (noțiunea de??) STEM în comunitatea locală.(??)<br></h4>
             </div>
             <div class="col s12 m4">
                 <h3 class=" center black-text text-darken-4" id="logo_content">
