make the phone number easier to copy

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="row">
                 <div class="col l6 s8 offset-s2">
                     <h4 class="white-text">Contact</h4>
-                    <h6 class="grey-text text-lighten-4"><i class="fa fa-phone"></i> +40 (766) 417 409 (Foarfecă Guniță, mentorul echipei)</h6>
+                    <h6 class="grey-text text-lighten-4"><i class="fa fa-phone"></i> +40766417409 (Foarfecă Guniță, mentorul echipei)</h6>
                     <h6 class="grey-text text-lighten-4"><i class="fa fa-envelope"></i> boogeybots@gmail.com</h6>
 
                 </div>
