--- a/index.html
+++ b/index.html
@@ -128,19 +128,45 @@
         <div class="parallax"><img src="brickbot_demo.jpg" alt="Unsplashed background img 1"></div>
     </div>
 
-    <div class="container">
+    <div class="container no-border">
         <h2 class="header center black-text"> SPONSORI</h2>
         <hr class="short-hr">
         <div class="row">
-            <div class="col s12 m8 pull-s1 push-m1">
-                <h4>
-                    <a href="http://getica95.ro/" target="_blank"><img src="sigla-getica.jpg" class="responsive-img"></a>
-                </h4>
+            <div class="col s6 m2 push-m1 hide-on-med-and-down">
+                <div class="card">
+
+                    <a href="https://www.facebook.com/pages/category/Local-Business/Atak-Security-1639021399701222/" target="_blank"><img src="atak_logo.jpg" class="responsive-img"> </a>
+                </div>
             </div>
 
-            <div class="col s6 m2 push-m2 push-s3">
-                <a href="http://colegiulvlahuta.ro" target="_blank"><img src="vlahuta_logo.jpg" class="responsive-img"> </a>
+            <div class="col s12 m6 offset-m1">
+                <div class="card">
+                    <h4>
+                        <a href="http://getica95.ro/" target="_blank"><img src="sigla-getica.png" class="responsive-img"></a>
+                    </h4>
+                </div>
             </div>
+
+            <div class="col s6 m2 push-m1 show-on-small" style="display:none">
+                <div class="card">
+
+                    <a href="https://www.facebook.com/pages/category/Local-Business/Atak-Security-1639021399701222/" target="_blank"><img src="atak_logo.jpg" class="responsive-img"> </a>
+                </div>
+            </div>
+
+
+            <div class="col s6 m2">
+                <div class="card">
+                    <a href="https://www.italprod.eu/ro/" target="_blank"><img src="ital-prod-logo.jpg" class="responsive-img"> </a>
+                </div>
+            </div>
+
+            <div class="col s6 m2 pull-s3 ">
+                <div class="card">
+                    <a href="https://dugheanadeprinturi.ro/" target="_blank"><img src="dugheana-logo.png" class="responsive-img"> </a>
+                </div>
+            </div>
+
         </div>
     </div>
 
