center the logo routine

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
 
             <div class="col s6 m2 push-m1 show-on-small" style="display:none">
-                <div class="card">
+                <div class="card atak">
 
                     <a href="https://www.facebook.com/pages/category/Local-Business/Atak-Security-1639021399701222/" target="_blank"><img src="atak_logo.jpg" class="responsive-img"> </a>
                 </div>
@@ -162,8 +162,8 @@
             </div>
 
             <div class="col s6 m2 pull-s3 ">
-                <div class="card">
-                    <a href="https://dugheanadeprinturi.ro/" target="_blank"><img src="dugheana-logo.png" class="responsive-img"> </a>
+                <div class="card dugheana">
+                    <a href="https://dugheanadeprinturi.ro/" target="_blank"><img src="dugheana-logo.png" class="responsive-img "> </a>
                 </div>
             </div>
 
