center the logo routine again but only on one page i honestly just don t understand anymore how this thing even works

--- a/our_team.html
+++ b/our_team.html
@@ -43,7 +43,7 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper black lighten-1 z-depth-2">
-                <a href="index.html" class="brand-logo"><img src="bogey_logo_alb.png"> </a>
+                <a href="index.html" class="brand-logo" id="our_team"><img src="bogey_logo_alb.png"> </a>
 
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
