Change the footer so there s not any problems with overflowing content to the right on mobile

--- a/our_team.html
+++ b/our_team.html
@@ -228,13 +228,13 @@
     <footer class="page-footer grey darken-4">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12 offset-s2">
+                <div class="col l6 s8 offset-s2">
                     <h4 class="white-text">Contact</h4>
-                    <h6 class="grey-text text-lighten-4"><i class="fa fa-phone"></i> +4072334585475847435</h6>
+                    <h6 class="grey-text text-lighten-4"><i class="fa fa-phone"></i> +40766417409 (Foarfecă Guniță, mentorul echipei)</h6>
                     <h6 class="grey-text text-lighten-4"><i class="fa fa-envelope"></i> boogeybots@gmail.com</h6>
 
                 </div>
-                <div class="col l4 offset-l2 s12 offset-s2">
+                <div class="col l4 offset-l2 s8 offset-s2">
                     <h4 class=" white-text">Useful Links</h4>
 
                     <ul>
