Center the ital-prod logo

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
             </div>
 
 
-            <div class="col s6 m2">
-                <div class="card">
+            <div class="col s6 m2 ital-prod">
+                <div class="card ">
                     <a href="https://www.italprod.eu/ro/" target="_blank"><img src="ital-prod-logo.jpg" class="responsive-img"> </a>
                 </div>
             </div>
