--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <h4 class="header center white-text">
                     Ajută-ne în lupta contra COVID-19!
                 </h4>
-                <h5 class="header center white-text">
+                <h5 class="header center white-text iban">
                     <i class="fa fa-donate white-text"></i> Donează la:<br>RO84BRDE100SV64320531000
                 </h5>
                 <h6 class="header center white-text">
