remove a br in the iban code

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     Ajută-ne în lupta contra COVID-19!
                 </h4>
                 <h5 class="header center white-text iban">
-                    <i class="fa fa-donate white-text"></i> Donează la:<br>RO84BRDE100SV64320531000
+                    <i class="fa fa-donate white-text"></i> Donează la: RO84BRDE100SV64320531000
                 </h5>
                 <h6 class="header center white-text">
                     (Codul IBAN al contului BRD)
