--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <br>
                 <hr>
                 <br>
-                <h4 class="center black-text text-darken-4">Echipa de robotică a Colegiului Național "Alexandru Vlahuță" a fost înființată in anul 2018 cu misiunea de a introduce (noțiunea de??) STEM în comunitatea locală.(??)<br></h4>
+                <h4 class="center black-text text-darken-4">Echipa de robotică a Colegiului Național "Alexandru Vlahuță" a fost înființată in anul 2018 cu misiunea de a răspândi STEM în comunitatea locală.<br></h4>
             </div>
             <div class="col s12 m4">
                 <h3 class=" center black-text text-darken-4" id="logo_content">
@@ -129,7 +129,7 @@
     <br>
 
     <div class="container">
-        <h2 class="header center black-text"> GALERIE</h2>
+        <h2 class="header center-align black-text"> GALERIE <a href="gallery.html" style="padding-left: 10px;"><i class="fa fa-plus-circle blue-text  valign-wrapper"></i></a></h2>
         <hr class="short-hr">
     </div>
     <br>
@@ -155,7 +155,7 @@
 
 
     <div class="container no-border">
-        <h2 class="header center black-text"> SPONSORI</h2>
+        <h2 class="header center black-text"> SPONSORI </h2>
         <hr class="short-hr">
         <div class="row">
             <div class="col s6 m2 push-m1 hide-on-med-and-down atak-big">
