--- a/gallery.html
+++ b/gallery.html
@@ -41,6 +41,24 @@
 </head>
 
 <body>
+    <div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper black lighten-1 z-depth-2">
+                <a href="index.html" class="brand-logo"><img src="bogey_logo_alb.png"> </a>
+
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="our_team.html">Our Team</a></li>
+                    <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "tiny right fa fa-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com/BoogeyBots/" target="_blank"><i class = " tiny right fa fa-instagram"></i></a></li>
+                </ul>
+
+            </div>
+        </nav>
+    </div>
+
     <h1 class="center">
         In work
     </h1>
