add gallery to the navbar

--- a/gallery.html
+++ b/gallery.html
@@ -49,8 +49,10 @@
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="our_team.html">Our Team</a></li>
+                    <li><a href="#">Gallery</a></li>
+
                     <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "tiny right fa fa-facebook"></i></a></li>
                     <li><a href="https://www.instagram.com/BoogeyBots/" target="_blank"><i class = " tiny right fa fa-instagram"></i></a></li>
                 </ul>
@@ -59,7 +61,20 @@
         </nav>
     </div>
 
+    <ul id="mobile-demo" class="sidenav">
+        <li>
+            <a href="#!" class="sidenav-close"> <i class="small material-icons white-text">close</i>
+            </a>
+        </li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="our_team.html">Our Team</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "small left fa fa-facebook"></i></a></li>
+        <li><a href="https://www.instagram.com/BoogeyBots/"><i class = "small left fa fa-instagram"></i></a></li>
+    </ul>
+
     <h1 class="center">
         Work in Progress
     </h1>
+
 </body>
