--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="#">Home</a></li>
                     <li><a href="our_team.html">Our Team</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+
                     <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "tiny right fa fa-facebook"></i></a></li>
                     <li><a href="https://www.instagram.com/BoogeyBots/" target="_blank"><i class = " tiny right fa fa-instagram"></i></a></li>
                 </ul>
@@ -67,6 +69,7 @@
         </li>
         <li><a href="#">Home</a></li>
         <li><a href="our_team.html">Our Team</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
         <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "small left fa fa-facebook"></i></a></li>
         <li><a href="https://www.instagram.com/BoogeyBots/"><i class = "small left fa fa-instagram"></i></a></li>
     </ul>
