add gallery to the navbar

--- a/our_team.html
+++ b/our_team.html
@@ -43,15 +43,17 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper black lighten-1 z-depth-2">
-                <a href="index.html" class="brand-logo" id="our_team"><img src="bogey_logo_alb.png"> </a>
+                <a href="index.html" class="brand-logo"><img src="bogey_logo_alb.png"> </a>
 
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="our_team.html" class="active">Our Team</a></li>
+                    <li><a href="#">Our Team</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+
                     <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "tiny right fa fa-facebook"></i></a></li>
-                    <li><a href="https://www.instagram.com/BoogeyBots/" target="_blank"><i class ="tiny right fa fa-instagram"></i></a></li>
+                    <li><a href="https://www.instagram.com/BoogeyBots/" target="_blank"><i class = " tiny right fa fa-instagram"></i></a></li>
                 </ul>
 
             </div>
@@ -64,7 +66,8 @@
             </a>
         </li>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#" class="active">Our Team</a></li>
+        <li><a href="#">Our Team</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
         <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "small left fa fa-facebook"></i></a></li>
         <li><a href="https://www.instagram.com/BoogeyBots/"><i class = "small left fa fa-instagram"></i></a></li>
     </ul>
