--- a/gallery.html
+++ b/gallery.html
@@ -73,8 +73,44 @@
         <li><a href="https://www.instagram.com/BoogeyBots/"><i class = "small left fa fa-instagram"></i></a></li>
     </ul>
 
-    <h1 class="center">
-        Work in Progress
-    </h1>
+    <div class="container">
+        <h2 class="header center-align black-text"> GALERIE </h2>
+        <hr class="short-hr">
+    </div>
+    <br>
+    <div class=" big-container">
+        <div class="row">
+            <div class="col s12 m4">
+                <div class="card">
+                    <img src="minister-2019.jpg" class="materialboxed responsive-img">
+                </div>
+            </div>
+            <div class="col s12 m4">
+                <div class="card">
+                    <img src="nationala-2019.jpg" class="materialboxed responsive-img">
+                </div>
+            </div>
+            <div class="col s12 m4">
+                <div class="card">
+                    <img src="quantum-team-photo.jpg" class="materialboxed responsive-img">
+                </div>
+            </div>
+        </div>
+    </div>
 
+
+
+
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script>
+        (function($) {
+            $(function() {
+
+                $('.materialboxed').materialbox();
+                $('.sidenav').sidenav();
+
+            });
+        })(jQuery);
+    </script>
 </body>
