--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper black lighten-1 z-depth-2">
-                <a href="index.html" class="brand-logo"><img src="bogey_logo_alb.png"> </a>
+                <a href="#" class="brand-logo"><img src="bogey_logo_alb.png"> </a>
 
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
