organize the project a bit

--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper black lighten-1 z-depth-2">
-                <a href="index.html" class="brand-logo"><img src="bogey_logo_alb.png"> </a>
+                <a href="index.html" class="brand-logo"><img src="images/logos/bogey_logo_alb.png"> </a>
 
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
@@ -82,17 +82,17 @@
         <div class="row">
             <div class="col s12 m4">
                 <div class="card">
-                    <img src="minister-2019.jpg" class="materialboxed responsive-img">
+                    <img src="images/gallery/minister-2019.jpg" class="materialboxed responsive-img">
                 </div>
             </div>
             <div class="col s12 m4">
                 <div class="card">
-                    <img src="nationala-2019.jpg" class="materialboxed responsive-img">
+                    <img src="images/gallery/nationala-2019.jpg" class="materialboxed responsive-img">
                 </div>
             </div>
             <div class="col s12 m4">
                 <div class="card">
-                    <img src="quantum-team-photo.jpg" class="materialboxed responsive-img">
+                    <img src="images/gallery/quantum-team-photo.jpg" class="materialboxed responsive-img">
                 </div>
             </div>
         </div>
