--- a/our_team.html
+++ b/our_team.html
@@ -43,7 +43,7 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper black lighten-1 z-depth-2">
-                <a href="index.html" class="brand-logo"><img src="bogey_logo_alb.png"> </a>
+                <a href="index.html" class="brand-logo"><img src="images/logos/bogey_logo_alb.png"> </a>
 
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
@@ -84,7 +84,7 @@
             <div class="col s12 m3">
                 <div class="card hoverable medium">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img src="sergiu.jpg" class="activator ">
+                        <img src="images/people/sergiu.jpg" class="activator ">
                     </div>
                     <div class="card-content">
                         <h5 class="card-title activator red-text text-darken-4 center-align">SERGIU MARTON</h5>
@@ -106,7 +106,7 @@
             <div class="col s12 m3">
                 <div class="card activator hoverable medium">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img src="nicusor.jpg" class="activator ">
+                        <img src="images/people/nicusor.jpg" class="activator ">
                     </div>
                     <div class="card-content">
                         <h5 class="card-title activator red-text text-darken-4 center-align">NICUȘOR CRUCERU</h5>
@@ -130,7 +130,7 @@
             <div class="col s12 m3">
                 <div class="card hoverable medium">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img src="costelush.jpg" class="activator">
+                        <img src="images/people/costelush.jpg" class="activator">
                     </div>
                     <div class="card-content">
                         <h5 class="card-title activator red-text text-darken-4 center-align">COSTEL PETREA</h5>
@@ -154,7 +154,7 @@
             <div class="col s12 m3">
                 <div class="card hoverable medium">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img src="bogdan.jpg" class="activator">
+                        <img src="images/people/bogdan.jpg" class="activator">
                     </div>
                     <div class="card-content">
                         <h5 class="card-title activator red-text text-darken-4 center-align">CARP BOGDAN</h5>
@@ -178,7 +178,7 @@
             <div class="col s12 m3">
                 <div class="card hoverable medium">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img src="images/rares_done.jpg" class="activator">
+                        <img src="images/people/rares_done.jpg" class="activator">
                     </div>
                     <div class="card-content">
                         <h5 class="card-title activator red-text text-darken-4 center-align">RAREȘ DONE</h5>
@@ -201,7 +201,7 @@
             <div class="col s12 m3">
                 <div class="card hoverable medium">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img src="nicu.jpg" class="activator">
+                        <img src="images/people/nicu.jpg" class="activator">
                     </div>
                     <div class="card-content">
                         <h5 class="card-title activator red-text text-darken-4 center-align">NICU CIOCÎRLAN</h5>
