--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper black lighten-1 z-depth-2">
-                <a href="#" class="brand-logo"><img src="bogey_logo_alb.png"> </a>
+                <a href="#" class="brand-logo"><img src="images/logos/bogey_logo_alb.png"> </a>
 
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
@@ -115,7 +115,7 @@
             <div class="col s12 m4">
                 <h3 class=" center black-text text-darken-4" id="logo_content">
                     <br>
-                    <img class="responsive-img" id="logo-content" src="boogey_logo_real.png">
+                    <img class="responsive-img" id="logo-content" src="images/logos/boogey_logo_real.png">
                 </h3>
                 <br><br><br>
             </div>
@@ -127,7 +127,7 @@
     <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
         </div>
-        <div class="parallax"><img src="brickbot_demo.jpg" alt="Unsplashed background img 1"></div>
+        <div class="parallax"><img src="images/gallery/brickbot_demo.jpg" alt="Unsplashed background img 1"></div>
     </div>
     <br>
 
@@ -140,17 +140,17 @@
         <div class="row">
             <div class="col s12 m4">
                 <div class="card">
-                    <img src="minister-2019.jpg" class="materialboxed responsive-img">
+                    <img src="images/gallery/minister-2019.jpg" class="materialboxed responsive-img">
                 </div>
             </div>
             <div class="col s12 m4">
                 <div class="card">
-                    <img src="nationala-2019.jpg" class="materialboxed responsive-img">
+                    <img src="images/gallery/nationala-2019.jpg" class="materialboxed responsive-img">
                 </div>
             </div>
             <div class="col s12 m4">
                 <div class="card">
-                    <img src="quantum-team-photo.jpg" class="materialboxed responsive-img">
+                    <img src="images/gallery/quantum-team-photo.jpg" class="materialboxed responsive-img">
                 </div>
             </div>
         </div>
@@ -164,14 +164,14 @@
             <div class="col s6 m2 push-m1 hide-on-med-and-down atak-big">
                 <div class="card ">
 
-                    <a href="https://www.facebook.com/pages/category/Local-Business/Atak-Security-1639021399701222/" target="_blank"><img src="atak_logo.jpg" class="responsive-img"> </a>
+                    <a href="https://www.facebook.com/pages/category/Local-Business/Atak-Security-1639021399701222/" target="_blank"><img src="images/logos/atak_logo.jpg" class="responsive-img"> </a>
                 </div>
             </div>
 
             <div class="col s12 m6 offset-m1">
                 <div class="card">
                     <h4>
-                        <a href="http://getica95.ro/" target="_blank"><img src="sigla-getica.png" class="responsive-img"></a>
+                        <a href="http://getica95.ro/" target="_blank"><img src="images/logos/sigla-getica.png" class="responsive-img"></a>
                     </h4>
                 </div>
             </div>
@@ -179,20 +179,20 @@
             <div class="col s6 m2 push-m1 show-on-small" style="display:none">
                 <div class="card atak">
 
-                    <a href="https://www.facebook.com/pages/category/Local-Business/Atak-Security-1639021399701222/" target="_blank"><img src="atak_logo.jpg" class="responsive-img"> </a>
+                    <a href="https://www.facebook.com/pages/category/Local-Business/Atak-Security-1639021399701222/" target="_blank"><img src="images/logos/atak_logo.jpg" class="responsive-img"> </a>
                 </div>
             </div>
 
 
             <div class="col s6 m2 ital-prod">
                 <div class="card ">
-                    <a href="https://www.italprod.eu/ro/" target="_blank"><img src="ital-prod-logo.jpg" class="responsive-img"> </a>
+                    <a href="https://www.italprod.eu/ro/" target="_blank"><img src="images/logos/ital-prod-logo.jpg" class="responsive-img"> </a>
                 </div>
             </div>
 
             <div class="col s6 m2 pull-s3 ">
                 <div class="card dugheana">
-                    <a href="https://dugheanadeprinturi.ro/" target="_blank"><img src="dugheana-logo.png" class="responsive-img "> </a>
+                    <a href="https://dugheanadeprinturi.ro/" target="_blank"><img src="images/logos/dugheana-logo.png" class="responsive-img "> </a>
                 </div>
             </div>
 
