add a footer to the gallery

--- a/gallery.html
+++ b/gallery.html
@@ -98,6 +98,42 @@
         </div>
     </div>
 
+    <footer class="page-footer grey darken-4">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s8 offset-s2">
+                    <h4 class="white-text">Contact</h4>
+                    <h6 class="grey-text text-lighten-4"><i class="fa fa-phone"></i> +40766417409 (Foarfecă Guniță, mentorul echipei)</h6>
+                    <h6 class="grey-text text-lighten-4"><i class="fa fa-envelope"></i> boogeybots@gmail.com</h6>
+
+                </div>
+                <div class="col l4 offset-l2 s8 offset-s2">
+                    <h4 class=" white-text">Useful Links</h4>
+
+                    <ul>
+                        <li>
+                            <h6><a class="blue-text text-darken-2" href="https://www.firstinspires.org/robotics/ftc" target="_blank">More About FTC</a> </h6>
+                        </li>
+                        <li>
+                            <h6><a class="blue-text text-darken-2" href="https://github.com/BoogeyBots/Website" target="_blank">The code for this website</a> </h6>
+                        </li>
+                        <li>
+                            <span>
+                                <a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "white-text small left fa fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/BoogeyBots/" target = "_blank"><i class = "white-text small fa fa-instagram"></i></a>
+                            </span>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2020 BoogeyBots
+            </div>
+        </div>
+    </footer>
 
 
 
