--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <br>
 
     <div class="container">
-        <h2 class="header center-align black-text"> GALERIE <a href="gallery.html" style="padding-left: 10px;"><i class="fa fa-plus-circle blue-text  valign-wrapper"></i></a></h2>
+        <h2 class="header center-align black-text"> Galerie <a href="gallery.html" style="padding-left: 10px;"><i class="fa fa-plus-circle blue-text  valign-wrapper"></i></a></h2>
         <hr class="short-hr">
     </div>
     <br>
@@ -158,7 +158,7 @@
 
 
     <div class="container no-border">
-        <h2 class="header center black-text"> SPONSORI </h2>
+        <h2 class="header center black-text"> Sponsori </h2>
         <hr class="short-hr">
         <div class="row">
             <div class="col s6 m2 push-m1 hide-on-med-and-down atak-big">
