change the titles

--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>FTC's RO141</title>
+    <title>BoogeyBots | Gallery</title>
 
     <meta name="description" content="Site-ul echipei de robotică BoogeyBots">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -85,7 +85,7 @@
                     <img src="images/gallery/minister-2019.jpg" class="materialboxed responsive-img">
                 </div>
             </div>
-            
+
             <div class="col s12 m4">
                 <div class="card">
                     <img src="images/gallery/nationala-2019.jpg" class="materialboxed responsive-img">
