--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>FTC's RO141</title>
+    <title>BoogeyBots | Home</title>
 
     <meta name="description" content="Site-ul echipei de robotică BoogeyBots">
     <meta name="viewport" content="width=device-width, initial-scale=1">
