--- a/gallery.html
+++ b/gallery.html
@@ -74,7 +74,7 @@
     </ul>
 
     <div class="container">
-        <h2 class="header center-align black-text"> Gallery </h2>
+        <h2 class=" center-align black-text"> Gallery </h2>
         <hr class="short-hr">
     </div>
     <br>
