--- a/our_team.html
+++ b/our_team.html
@@ -73,13 +73,12 @@
     </ul>
 
     <div class="container">
-        <div class="row center">
-            <h2 class=" col s12 dark">Our Team</h2>
-
-        </div>
+        <h2 class="center-align  dark">Our Team</h2>
         <hr class="short-hr">
-        <br><br>
+        <br>
+    </div>
 
+    <div class="container">
         <div class="row">
             <div class="col s12 m3">
                 <div class="card hoverable medium">
@@ -182,7 +181,7 @@
                     </div>
                     <div class="card-content">
                         <h5 class="card-title activator red-text text-darken-4 center-align">RAREȘ DONE</h5>
-                        <h6 class="center-align">Designer Photo</h6>
+                        <h6 class="center-align">Labagiu</h6>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title red-text text-darken-4 center-align">
