--- a/our_team.html
+++ b/our_team.html
@@ -181,7 +181,7 @@
                     </div>
                     <div class="card-content">
                         <h5 class="card-title activator red-text text-darken-4 center-align">RAREȘ DONE</h5>
-                        <h6 class="center-align">Labagiu</h6>
+                        <h6 class="center-align">Designer Photo</h6>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title red-text text-darken-4 center-align">
