--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
                     <li><a href="our_team.html">Our Team</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
 
-                    <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "tiny right fa fa-facebook"></i></a></li>
-                    <li><a href="https://www.instagram.com/BoogeyBots/" target="_blank"><i class = " tiny right fa fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i
+                                class="tiny right fa fa-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com/BoogeyBots/" target="_blank"><i
+                                class=" tiny right fa fa-instagram"></i></a></li>
                 </ul>
 
             </div>
@@ -70,8 +72,8 @@
         <li><a href="#">Home</a></li>
         <li><a href="our_team.html">Our Team</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "small left fa fa-facebook"></i></a></li>
-        <li><a href="https://www.instagram.com/BoogeyBots/"><i class = "small left fa fa-instagram"></i></a></li>
+        <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class="small left fa fa-facebook"></i></a></li>
+        <li><a href="https://www.instagram.com/BoogeyBots/"><i class="small left fa fa-instagram"></i></a></li>
     </ul>
 
     <div class="container">
@@ -81,7 +83,8 @@
                 <br>
                 <hr>
                 <br>
-                <h4 class="center black-text text-darken-4">Echipa de robotică a Colegiului Național "Alexandru Vlahuță" a fost înființată in anul 2018 cu misiunea de a răspândi STEM în comunitatea locală.<br></h4>
+                <h4 class="center black-text text-darken-4">Echipa de robotică a Colegiului Național "Alexandru Vlahuță"
+                    a fost înființată in anul 2018 cu misiunea de a răspândi STEM în comunitatea locală.<br></h4>
             </div>
             <div class="col s12 m4">
                 <h3 class=" center black-text text-darken-4" id="logo_content">
@@ -98,12 +101,14 @@
     <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
         </div>
-        <div class="parallax"><img src="images/gallery/brickbot_demo.jpg" alt="Unsplashed background img 1"></div>
+        <div class="parallax"><img src="images/gallery/brickbot_demo.jpg"></div>
     </div>
-    <br>
 
+
+
+    <!--
     <div class="container">
-        <h2 class="header center-align black-text"> Galerie <a href="gallery.html" style="padding-left: 10px;"><i class="fa fa-plus-circle blue-text  valign-wrapper"></i></a></h2>
+        <h2 class="header center-align blue-text"> Galerie <a href="gallery.html" style="padding-left: 10px;"><i class="fa fa-images valign-wrapper black-text"></i></a></h2>
         <hr class="short-hr">
     </div>
     <br>
@@ -126,7 +131,41 @@
             </div>
         </div>
     </div>
+    -->
 
+
+    <div class="container">
+        <h2 class="header center-align "> Galerie <a href="gallery.html" style="padding-left: 10px;"></a></h2>
+        <hr class="short-hr">
+    </div>
+
+    <br>
+
+    <div class="container">
+        <div class="slider">
+            <ul class="slides">
+                <li>
+                    <img src="images/gallery/brickbot_demo.jpg"> 
+
+                </li>
+                <li>
+                    <img src="images/gallery/minister-2019.jpg"> 
+
+                </li>
+                <li>
+                    <img src="images/gallery/nationala-2019.jpg"> 
+
+                </li>
+                <li>
+                    <img src="images/gallery/regionala2.png"> 
+                </li>
+            </ul>
+        </div>
+        <a href="gallery.html"><h4 class=" center-align blue-text">...vezi mai multe poze</h4></a>
+    </div>
+
+    <div class="container">
+    </div>
 
     <div class="container no-border">
         <h2 class="header center black-text"> Sponsori </h2>
@@ -135,14 +174,16 @@
             <div class="col s6 m2 push-m1 hide-on-med-and-down atak-big">
                 <div class="card ">
 
-                    <a href="https://www.facebook.com/pages/category/Local-Business/Atak-Security-1639021399701222/" target="_blank"><img src="images/logos/atak_logo.jpg" class="responsive-img"> </a>
+                    <a href="https://www.facebook.com/pages/category/Local-Business/Atak-Security-1639021399701222/"
+                        target="_blank"><img src="images/logos/atak_logo.jpg" class="responsive-img"> </a>
                 </div>
             </div>
 
             <div class="col s12 m6 offset-m1">
                 <div class="card">
                     <h4>
-                        <a href="http://getica95.ro/" target="_blank"><img src="images/logos/sigla-getica.png" class="responsive-img"></a>
+                        <a href="http://getica95.ro/" target="_blank"><img src="images/logos/sigla-getica.png"
+                                class="responsive-img"></a>
                     </h4>
                 </div>
             </div>
@@ -150,20 +191,23 @@
             <div class="col s6 m2 push-m1 show-on-small" style="display:none">
                 <div class="card atak">
 
-                    <a href="https://www.facebook.com/pages/category/Local-Business/Atak-Security-1639021399701222/" target="_blank"><img src="images/logos/atak_logo.jpg" class="responsive-img"> </a>
+                    <a href="https://www.facebook.com/pages/category/Local-Business/Atak-Security-1639021399701222/"
+                        target="_blank"><img src="images/logos/atak_logo.jpg" class="responsive-img"> </a>
                 </div>
             </div>
 
 
             <div class="col s6 m2 ital-prod">
                 <div class="card ">
-                    <a href="https://www.italprod.eu/ro/" target="_blank"><img src="images/logos/ital-prod-logo.jpg" class="responsive-img"> </a>
+                    <a href="https://www.italprod.eu/ro/" target="_blank"><img src="images/logos/ital-prod-logo.jpg"
+                            class="responsive-img"> </a>
                 </div>
             </div>
 
             <div class="col s6 m2 pull-s3 ">
                 <div class="card dugheana">
-                    <a href="https://dugheanadeprinturi.ro/" target="_blank"><img src="images/logos/dugheana-logo.png" class="responsive-img "> </a>
+                    <a href="https://dugheanadeprinturi.ro/" target="_blank"><img src="images/logos/dugheana-logo.png"
+                            class="responsive-img "> </a>
                 </div>
             </div>
 
@@ -177,7 +221,8 @@
             <div class="row">
                 <div class="col l6 s8 offset-s2">
                     <h4 class="white-text">Contact</h4>
-                    <h6 class="grey-text text-lighten-4"><i class="fa fa-phone"></i> +40766417409 (Foarfecă Guniță, mentorul echipei)</h6>
+                    <h6 class="grey-text text-lighten-4"><i class="fa fa-phone"></i> +40766417409 (Foarfecă Guniță,
+                        mentorul echipei)</h6>
                     <h6 class="grey-text text-lighten-4"><i class="fa fa-envelope"></i> boogeybots@gmail.com</h6>
 
                 </div>
@@ -186,15 +231,19 @@
 
                     <ul>
                         <li>
-                            <h6><a class="blue-text text-darken-2" href="https://www.firstinspires.org/robotics/ftc" target="_blank">More About FTC</a> </h6>
+                            <h6><a class="blue-text text-darken-2" href="https://www.firstinspires.org/robotics/ftc"
+                                    target="_blank">More About FTC</a> </h6>
                         </li>
                         <li>
-                            <h6><a class="blue-text text-darken-2" href="https://github.com/BoogeyBots/Website" target="_blank">The code for this website</a> </h6>
+                            <h6><a class="blue-text text-darken-2" href="https://github.com/BoogeyBots/Website"
+                                    target="_blank">The code for this website</a> </h6>
                         </li>
                         <li>
                             <span>
-                                <a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "white-text small left fa fa-facebook"></i></a>
-                                <a href="https://www.instagram.com/BoogeyBots/" target = "_blank"><i class = "white-text small fa fa-instagram"></i></a>
+                                <a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i
+                                        class="white-text small left fa fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/BoogeyBots/" target="_blank"><i
+                                        class="white-text small fa fa-instagram"></i></a>
                             </span>
                         </li>
 
@@ -212,12 +261,17 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script>
-        (function($) {
-            $(function() {
+        (function ($) {
+            $(function () {
 
                 $('.sidenav').sidenav();
                 $('.parallax').parallax();
                 $('.materialboxed').materialbox();
+
+                $(document).ready(function () {
+                    $('.slider').slider({ interval: 3000 });
+                });
+
 
 
             }); // end of document ready
