--- a/our_team.html
+++ b/our_team.html
@@ -282,7 +282,7 @@
                                 </p>
                             </a>
 
-                        </span>
+                        </span> 
                     </div>
                 </div>
             </div>
@@ -328,7 +328,7 @@
                             <br>
                             VICTOR ȘERBAN
 
-                            <a href="https://www.instagram.com/vlad.teodorbirsan/" target="_blank">
+                            <a href="https://www.instagram.com/victor.serban05/" target="_blank">
                                 <p class="center">
                                     <i class="small fa fa-instagram"></i>
                                 </p>
